--- a/UNO_ICOER_Colab.ipynb
+++ b/UNO_ICOER_Colab.ipynb
@@ -15,10 +15,8 @@
    "outputs": [],
    "source": [
     "# CÉLULA 1: INSTALAÇÃO DAS BIBLIOTECAS\n",
-    "# A opção --force-reinstall garante uma instalação limpa para evitar erros de módulo.\n",
-    "# APÓS EXECUTAR ESTA CÉLULA, REINICIE O AMBIENTE DE EXECUÇÃO.\n",
-    "\n",
-    "!pip install --force-reinstall pandas spacy textblob matplotlib plotly --quiet\n",
+    "# A opção --force-reinstall garante uma instalação limpa. REINICIE O RUNTIME APÓS EXECUTAR!\n",
+    "!pip install --force-reinstall pandas spacy textblob matplotlib plotly==5.18.0 --quiet\n",
     "!python -m textblob.download_corpora --quiet\n",
     "!python -m spacy download en_core_web_sm --quiet"
    ]
@@ -36,10 +34,10 @@
     "import matplotlib.pyplot as plt\n",
     "import plotly.express as px\n",
     "\n",
-    "# Carrega o modelo de linguagem\n",
     "try:\n",
     "    nlp = spacy.load('en_core_web_sm')\n",
-    "except: # Se o download falhar na primeira vez, tenta de novo\n",
+    "except Exception as e:\n",
+    "    print(f\"Erro ao carregar SpaCy: {e}. Tentando reinstalar...\")\n",
     "    !python -m spacy download en_core_web_sm --quiet\n",
     "    nlp = spacy.load('en_core_web_sm')"
    ]
@@ -73,7 +71,7 @@
     "        if not doc or not ref_doc or not doc.has_vector or not ref_doc.has_vector:\n",
     "            return {'semantica': 0, 'lexico': 0, 'estrutura': 0, 'coerencia': 0, 'memoria': 0, 'afetividade': 0}\n",
     "\n",
-    "        semantica = doc.similarity(ref_doc)\n",
+    "        semantica = doc.similarity(ref_doc) if doc and ref_doc else 0\n",
     "        tokens = [token.text.lower() for token in doc if token.is_alpha]\n",
     "        lexico = len(set(tokens)) / len(tokens) if tokens else 0\n",
     "        estrutura = sum([len(list(sent.root.subtree)) for sent in doc.sents]) / len(list(doc.sents)) if list(doc.sents) else 0\n",
@@ -129,14 +127,16 @@
    "outputs": [],
    "source": [
     "# CÉLULA 7: VISUALIZAÇÃO COM RADAR CHART\n",
-    "# Esta célula agora deve funcionar sem erros após a reinstalação e o reinício.\n",
     "df_long = pd.melt(pd.DataFrame(resultados).T.reset_index().rename(columns={'index': 'IA'}),\n",
     "                  id_vars=['IA'], var_name='Dimensão', value_name='Valor')\n",
+    "\n",
+    "# Verificar se há valores NaN e substituí-los por 0\n",
+    "df_long['Valor'] = df_long['Valor'].fillna(0)\n",
     "\n",
     "fig = px.line_polar(df_long, r='Valor', theta='Dimensão', line_close=True, color='IA',\n",
     "                    title=f\"ICOER v7.0 – SLECMA por IA (Convergência: {convergence_score:.2f})\")\n",
     "\n",
-    "fig.show(renderer=\"colab\") # Mantenha \"colab\" se estiver no Google Colab"
+    "fig.show(renderer=\"colab\")"
    ]
   },
   {
